Make header photo smaller, fix project images on mobile

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -94,8 +94,7 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.3)), color-stop(75%, rgba(22, 22, 22, 0.7)), to(#161616)), url("../img/cover.jpg");
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/cover.jpg");
+  background-color: #212529 !important;
   background-position: 50% 25%;
   background-repeat: no-repeat;
   background-attachment: scroll;
